# hallucinations

./: README.md  factal.html  pyproject.toml
hallucinations/: __init__.py
tests/: test_hallucinations.py
