[tool.poetry]
name = "hallucinations"
version = "0.1.1"
description = ""
authors = ["Rodolfo Ferro <rodolfoferroperez@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RodolfoFerro/hallucinations"
classifiers = [
	"Operating System :: OS Independent"
]
include = [
	"LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1"
numba = "^0.45.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
